--- a/README.Rmd
+++ b/README.Rmd
@@ -89,17 +89,14 @@ plot_obj_food <- plot_vpc_exactbins(
   sim = mutate(simout, FOOD_f = factor(FOOD, levels = c(0,1), labels = c("Fasted", "Fed"))), 
   strat_vars = "FOOD_f",
   pcvpc = TRUE,
-  time_vars = c(TIME = "TIME", NTIME = "NTIME"),
-  output_vars = c(PRED = "PRED", IPRED = "IPRED", SIMDV = "SIMDV", OBSDV = "OBSDV"),
-  pi = c(0.05, 0.95),
-  ci = c(0.05, 0.95),
-  log_y = TRUE
-)
+  loq = 1
+) + 
+ scale_y_log10(guide = "axis_logticks")
 
 plot_obj_food
 
 #Add Legend
-plot_obj_leg <- plot_legend(pi = c(0.05, 0.95), ci = c(0.05, 0.95))
+plot_obj_leg <- plot_legend()
 plot_obj_leg
 
 plot_obj_food_wleg <- plot_obj_food + plot_obj_leg + plot_layout(heights = c(2,1))
