--- a/vignettes/eda-pmxhelpr.Rmd
+++ b/vignettes/eda-pmxhelpr.Rmd
@@ -156,7 +156,6 @@ plot_dvtime(data = plot_data_24, dv_var = "ODV", col_var = "Dose (mg)", cent = "
 These data are probably best visualized on a log-scale y-axis upweight the terminal phase profile. `plot_dvtime` includes an argument `log_y` which performs this operation with some additional formatting benefits over manually adding the layer to the returned object with `scale_y_log10`.
 
   + Includes log tick marks on the y-axis 
-  + Removes minor gridlines from the y-axis, which are misleading on a log-scale
   + Updates the caption with the correct central tendency measure if  `show_captions = TRUE`. 
 
 `plot_dvtime` uses the `stat_summary` function from `ggplot2` to calculate and plot the central tendency measures and error bars. An often overlooked feature of `stat_summary`, is that it calculates the summary statistics *after* any transformations to the data performed by changing the scales. This means that when `scale_y_log10()` is applied to the plot, the data are log-transformed for plotting and the central tendency measure returned when requesting `"mean"` from `stat_summary` is the *geometric mean*. If the `log_y` argument is used to generate semi-log plots along with `show_captions = TRUE`, then the caption will  delineate where arithmetic and gemoetric means are being returned. 
@@ -369,12 +368,17 @@ plot_dvtime(plot_data, dv_var = "ODV", col_var = "Dose (mg)", cent = "none",
   facet_wrap(~PART)
 ```
 
-We can plot an individual subject by filtering the input dataset. This could be extended generate plots for all individuals using `for` loops,  `purrr::map()` functions, or other vectorized methods.
+We can plot an individual subject by filtering the input dataset. This could be extended generate plots for all individuals using `for` loops, `lapply`,  `purrr::map()` functions, or other methods.
 
 ```{r plot-dvtime-blq2-indplots, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
-ids <- sort(unique(plot_data$ID))
+
+ids <- sort(unique(plot_data$ID)) #vector of unique subject ids
+n_ids <- length(ids) #count of unique subject ids
+plots_per_pg <- 4
+n_pgs <- ceiling(n_ids/plots_per_pg) #Total number of pages needed
+
 plist<- list()
-for(i in 1:length(ids)){
+for(i in 1:n_ids){
   plist[[i]] <- plot_dvtime(filter(plot_data, ID == ids[i]), 
                                dv_var = "ODV", col_var = "Dose (mg)", cent = "none",
             ylab = "Concentration (ng/mL)", log_y = TRUE,
@@ -385,17 +389,11 @@ for(i in 1:length(ids)){
   theme(legend.position="none")
 }
 
-
-groups <- length(plist)/4
-grpplist <- list()
-for(grp in 1:groups){
-  i <- (grp-1)*4+1
-  j <- grp*4
-  tmplist <- plist[i:j]
-  grpplist[[grp]] <- wrap_plots(tmplist)
-}
-
-grpplist
+lapply(1:n_pgs, function(n_pg) {
+      i <-  (n_pg-1)*plots_per_pg+1
+      j <- n_pg*plots_per_pg
+      wrap_plots(plist[i:j])
+})
 ```
 
 
