--- a/vignettes/eda-pmxhelpr.Rmd
+++ b/vignettes/eda-pmxhelpr.Rmd
@@ -184,7 +184,24 @@ plot_dvtime(data = plot_data, dv_var = "ODV", col_var = "Dose (mg)", cent = "mea
   facet_wrap(~PART)
 ```
 
-We could also plot these data as median + interquartile range (IQR) using the same approach, if we do not feel the sample size is sufficient for parametric summary statistics.
+The default error bar width is 2.5% of the maximum nominal time in the dataset. This can be overwritten to a user-specified value using the `barwidth` argument, which is passed to the `width` argument of `geom_errorbar`. 
+
+```{r plot-dvtime_part-meansdl-width, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+plot_dvtime(data = plot_data, dv_var = "ODV", col_var = "Dose (mg)", cent = "mean_sdl", 
+            ylab = "Concentration (ng/mL)", log_y = TRUE,
+            obs_dv = FALSE, barwidth = 8) +
+  facet_wrap(~PART)
+```
+
+We may want to only show the upper error bar, especially when computing the arithmetic mean +/- arithmetic SD on the linear scale. This can be accomplished by changing the `cent` argument to `mean_sdl_upper`.
+
+```{r plot-dvtime_part-meansdl-upper, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+plot_dvtime(data = plot_data, dv_var = "ODV", col_var = "Dose (mg)", cent = "mean_sdl_upper", 
+            ylab = "Concentration (ng/mL)", obs_dv = FALSE) +
+  facet_wrap(~PART)
+```
+
+We could also plot these data as median + interquartile range (IQR) using, if we do not feel the sample size is sufficient for parametric summary statistics. This can be accomplished by changing the `cent` argument to `median_iqr`.
 
 ```{r plot-dvtime_part-medianiqr, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(data = plot_data, dv_var = "ODV", col_var = "Dose (mg)", cent = "median_iqr", 
