Update breaks_time to accept abbreviations for "hours", "days", "weeks", "months".
Wrap rename for "DOSE" variable in plot_dvtime and plot_popgof in an `if` statement so that it is only checked/renamed if argument dosenorm = TRUE

--- a/vignettes/eda-pmxhelpr.Rmd
+++ b/vignettes/eda-pmxhelpr.Rmd
@@ -106,10 +106,10 @@ plot_dvtime(data = plot_data, dv_var = "ODV", col_var = "Dose (mg)", cent = "mea
 
   + `timeu` character string specifying time units. Options include:
   
-      * "hours" (default)
-      * "days"
-      * "weeks"
-      * "months"
+     * "hours" (default), "hrs", "hr", "h"
+     * "days", "dys", "dy", "d"
+     * "weeks", "wks", "wk", "w"
+     * "months", "mons", "mos", "mo", "m"
       
   + `n_breaks` number breaks requested from the algorithm. Default = 8.
   
