Update NEWS and README
Fix rename in plot_dvtime

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,6 +42,8 @@ Functions in this package use the following naming conventions:
   
 * Helper functions: *ReturnObject*_*Purpose*
   + `plot_dvtime` returns a `ggplot` object with a dependent variable plotted versus time
+  + `plot_doseprop` returns a `ggplot` object with log-log regression of exposure metrics versus dose
+  + `df_doseprop` returns a `data.frame` containing parameters from a log-log regression of exposure metrics versus dose
   + `plot_popgof` returns a `ggplot` object with observed, population-predicted, and individual-predicted values plotted versus time
   + `df_nobsbin` returns a summary `data.frame` with counts of the number of missing and non-missing observations per bin.
   + `df_pcdv` returns a `data.frame` containing the prediction-corrected dependent variable.
